# SimpleSecCheck

./: .dockerignore  .env  .env.example  .gitattributes  .gitignore  .gitlab-ci.yml  ARCHITECTURE_STEPS.md  AUTHENTICATION_MODES.md  CHANGELOG.md  CLI_DOCKER.md  Dockerfile  LOGGING.md  LOGGING_IMPLEMENTATION_PLAN.md  README.md  SETUP_IMPLEMENTATION_PLAN.md  SETUP_WIZARD_IMPLEMENTATION.md  THIRD_PARTY_LICENSES.md  docker-compose.prod.traefik.yml  docker-compose.prod.yml  docker-compose.refactored.yml  docker-compose.scanner-only.yml  docker-compose.traefik.yml  docker-compose.yml  entrypoint.sh  env.example  env.refactored.example  run-docker.sh  run-scanner.sh  setup.md  shell.nix  switch_auth_mode.py  test_auth_modes.py  test_implementation.py  test_setup_flow.py  tree.md
.github/: CICD_SETUP.md
backend/: Dockerfile  README.md  alembic.ini  ddd_blueprint.md  docker-entrypoint.sh  entrypoint.sh  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt  struct.md
backend/alembic/: README.md  env.py
backend/api/: __init__.py  health.py  json_datetime.py  main.py  scan_response_builder.py
backend/app/: logging_config.py  main.py
backend/cli/: setup_commands.py
backend/config/: production_settings.py  scanner_config.py  scanner_config.yaml  settings.py
backend/core/: admin.py  apps.py  authentication.py  docker_service.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
backend/domain/: __init__.py  datetime_serialization.py
backend/infrastructure/: container.py  docker_runner.py  logging_config.py
backend/migrations/: schema.sql
(+1228 files in other folders)
